// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test package-gets-updated: fail when the patch was not applied 1`] = `
"SNAPSHOT: fail when the patch was not applied

**ERROR** Failed to apply patch for package left-pad

  This error was caused because left-pad has changed since you
  made the patch file for it. This introduced conflicts with your patch,
  just like a merge conflict in Git when separate incompatible changes are
  made to the same piece of code.

  Maybe this means your patch file is no longer necessary, in which case
  hooray! Just delete it!

  Otherwise, you need to manually fix the patch file. Or generate a new one

  To generate a new one, just repeat the steps you made to generate the first
  one, but accounting for the changes in left-pad.

  i.e. make changes, run \`patch-package left-pad\`, and commit.

  To manually fix a patch file, Run:

     patch -p1 -i patches/left-pad+1.1.1.patch --verbose --dry-run

  To list rejected hunks. A 'hunk' is a section of patch file that describes
  one contiguous area of changes. They are numbered from 1 and begin with lines
  that look like this:

    @@ -48,5 +49,6 @@ function foo(bar) {

  Remove the conflicting hunks, then manually edit files in

    node_modules/left-pad

  to reflect the changes that the conflicting hunks were supposed to make.

  Then run \`patch-package left-pad\`

  Info:
    Patch was made for version 1.1.1
    Meanwhile node_modules/left-pad is version 1.1.3

error Command failed with exit code 1.
END SNAPSHOT"
`;

exports[`Test package-gets-updated: left-pad should contain patch-package 1`] = `
"SNAPSHOT: left-pad should contain patch-package
    // devide \`len\` by 2, ditch the patch-package
END SNAPSHOT"
`;

exports[`Test package-gets-updated: left-pad should still contain patch-package 1`] = `
"SNAPSHOT: left-pad should still contain patch-package
    // devide \`len\` by 2, ditch the patch-package
END SNAPSHOT"
`;

exports[`Test package-gets-updated: warning when the patch was applied but version changed 1`] = `
"SNAPSHOT: warning when the patch was applied but version changed

Warning: patch-package detected a patch file version mismatch

  Don't worry! This is probably fine. The patch was still applied
  successfully. Here's the deets:

  Patch file created for

    left-pad@1.1.1

  applied to

    left-pad@1.1.2

  This warning is just to give you a heads-up. There is a small chance of
  breakage even though the patch was applied successfully. Make sure the package
  still behaves like you expect (you wrote tests, right?) and then run

    patch-package left-pad

  to update the version in the patch file name and make this warning go away.

END SNAPSHOT"
`;
